--- a/lazyloadingfragments/src/main/res/layout/fragment_item.xml
+++ b/lazyloadingfragments/src/main/res/layout/fragment_item.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#444444">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#222222">
 
-    <TextView
+    <Button
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="我是Fragment2"
-        android:textColor="#ffffff"
+        tools:text="222"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
