--- a/lazyloadingfragments/src/main/res/layout/fragment_item.xml
+++ b/lazyloadingfragments/src/main/res/layout/fragment_item.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="#222222">
 
     <Button
@@ -11,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        tools:text="222"
+        android:text="loading"
         android:textColor="@color/cardview_dark_background"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
