--- a/lazyloadingfragments/src/main/res/layout/fragment_item_inner_viewpager.xml
+++ b/lazyloadingfragments/src/main/res/layout/fragment_item_inner_viewpager.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +6,13 @@
     tools:context=".MainActivity">
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
+        android:id="@+id/tabLayoutInner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="#ffffff" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
+        android:id="@+id/vpInner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#222222" />
