--- a/lazyloadingfragments/src/main/res/layout/activity_another.xml
+++ b/lazyloadingfragments/src/main/res/layout/activity_another.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnotherActivity">
+    tools:context=".activity.AnotherActivity">
 
     <TextView
         android:layout_width="wrap_content"
